--- a/industries-pdf.html
+++ b/industries-pdf.html
@@ -20,7 +20,7 @@
   <div class="sidebar">
     <div class="docs-logo">INFLOWSEM Docs</div>
     <ul class="nav">
-      <li class="nav-item"><a href="database.html">Database</a></li>gulp.html
+      <li class="nav-item"><a href="database.html">Database</a></li>
       <li class="nav-item"><a href="gulp.html">Gulp</a></li>
       <li class="nav-item"><a href="inflowsem-gulp.html">INFLOWSEM + Gulp</a></li>
       <li class="nav-item"><a href="creating-pages.html">Creating Pages</a></li>
