--- a/gulp.html
+++ b/gulp.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Gulp - INFLOWSEM Docs</title>
+  <title>INFLOWSEM Docs</title>
 
   <link rel="stylesheet" href="./styles/main.css">
 
