--- a/misc.html
+++ b/misc.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Misc - INFLOWSEM Docs</title>
+  <title>INFLOWSEM Docs</title>
 
   <link rel="stylesheet" href="./styles/main.css">
 
